# Fullstack-project

./: LICENSE  README.md
backend/: mypy_output.txt  pyproject.toml  test_results.txt
backend/api/: __init__.py
backend/api/common/: audit_logs_repository.py  base_repository.py  exceptions.py  logging.py  security.py  seeder_utils.py  utils.py
backend/api/common/dtos/: app_configuration_dto.py  cookies.py  health_dto.py  new_session_dto.py  passkey_rep_dto.py  token_dto.py  worker_dto.py
backend/api/common/enums/: gender.py
backend/api/core/: config.py  container.py  exceptions.py
backend/api/domain/dtos/: ai_dto.py  audit_logs_dto.py  auth_dto.py  billing_dto.py  branding_dto.py  checkout_dto.py  coolify_app_dto.py  dashboard_dto.py  email_schema_dto.py  notification_settings_dto.py  passkey_dto.py  permission_dto.py  pricing_dto.py  product_dto.py  role_dto.py  sso_settings_dto.py  storage_settings_dto.py  stripe_setting_dto.py  subcription_plan_dto.py  tenant_dto.py  user_dto.py  user_preference_dto.py
backend/api/usecases/: audit_logs_service.py  auth_service.py  billing_record_service.py  branding_service.py  file_service.py  local_ai_service.py  magic_link_service.py  notification_banner_service.py  pricing_service.py  product_service.py  role_service.py  sso_settings_service.py  storage_settings_service.py  stripe_setting_service.py  subscription_plan_service.py  tenant_service.py  user_preference_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/interfaces/: test_role_endpoint.py  test_tenant_endpoint.py  test_user_endpoint.py
(+84 files in other folders)
