[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.30.0",
    "beanie>=2.0.0",
    "boto3>=1.43.41",
    "celery[redis]>=5.3.1",
    "colorlog>=6.9.0",
    "faker>=40.28.1",
    "fastapi-mail>=1.6.5",
    "fastapi-sso>=0.21.1",
    "fastapi[standard]>=0.116.2",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "motor>=3.7.1",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "punq>=0.8.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "starlette>=1.3.1",
    "streamlit>=1.59.0",
    "stripe>=15.3.0",
    "uvicorn>=0.50.2",
    "webauthn>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
